@startuml Adapter Pattern - Fee Strategies

!define INTERFACE_COLOR #FFE6E6
!define ADAPTER_COLOR #E6F3FF
!define CLIENT_COLOR #E6FFE6

skinparam classBackgroundColor<<interface>> INTERFACE_COLOR
skinparam classBackgroundColor<<adapter>> ADAPTER_COLOR
skinparam classBackgroundColor<<client>> CLIENT_COLOR

' ===== TARGET INTERFACE =====
interface FeeStrategy <<interface>> {
  {abstract} +calculateFee(transactionAmount: BigDecimal): BigDecimal
}

' ===== CONCRETE ADAPTERS =====
class FlatFeeStrategy <<adapter>> implements FeeStrategy {
  - flatFee: BigDecimal
  --
  + FlatFeeStrategy(flatFee: BigDecimal)
  + calculateFee(amount: BigDecimal): BigDecimal
}

class PercentageFeeStrategy <<adapter>> implements FeeStrategy {
  - feeRate: BigDecimal
  --
  + PercentageFeeStrategy(feeRate: double)
  + calculateFee(amount: BigDecimal): BigDecimal
}

class PercentageMinimumFeeStrategy <<adapter>> implements FeeStrategy {
  - feeRate: BigDecimal
  - minimumFee: BigDecimal
  --
  + PercentageMinimumFeeStrategy(feeRate: double, minimum: BigDecimal)
  + calculateFee(amount: BigDecimal): BigDecimal
}

' ===== CLIENT =====
class BuySharesService <<client>> {
  - feeStrategy: FeeStrategy
  --
  + setFeeStrategy(strategy: FeeStrategy): void
  + buyShares(request: BuySharesRequest): void
}

class SellSharesService <<client>> {
  - feeStrategy: FeeStrategy
  --
  + setFeeStrategy(strategy: FeeStrategy): void
  + sellShares(request: SellSharesRequest): void
}

' ===== RELATIONSHIPS =====
BuySharesService --> FeeStrategy : uses
SellSharesService --> FeeStrategy : uses

' ===== NOTES =====
note right of FeeStrategy
  **Target Interface**
  Definerem hvordan gebyrberegning skal fungere
  Alle adapters implementerer denne kontrakt
end note

note bottom of FlatFeeStrategy
  **Adapter 1: Fast gebyr**
  Returnerer altid samme gebyr uanset beløb
  Eksempel: 15 DKK per transaktion
end note

note bottom of PercentageFeeStrategy
  **Adapter 2: Procentuel gebyr**
  Beregner gebyr som procent af beløbet
  Eksempel: 1% af transaktionsbeløbet
end note

note bottom of PercentageMinimumFeeStrategy
  **Adapter 3: Procent med minimum**
  Maksimum af procent eller minimumgebyr
  Eksempel: max(1% af beløb, 15 DKK)
end note

note right of BuySharesService
  **Client**
  Bruger FeeStrategy interface
  Afhænger KUN af interfacet, ikke konkrete adapters
  Kan skifte strategi ved runtime via setFeeStrategy()
end note

note left of SellSharesService
  **Client**
  Samme som BuySharesService
  Begge services kan bruges med vilkårlig adapter
end note

@enduml
